--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  background-color: #333;
+  background-color: red;
   font-size: 1.4rem;
   margin: 0 auto;
   display: flex;
