--- a/style.css
+++ b/style.css
@@ -456,7 +456,9 @@ hr {
   .entry-content {
     padding: 0 1rem;
   }
-
+  .entry-content .detail-list img {
+    max-height: 120px;
+  }
   .entry-title {
     font-size: 2.4rem;
   }
