--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ main {
   flex: 1;
   padding-bottom: 10rem;
 }
+
+/* ---------
+  FOOTER MENU
+--------- */
+
 footer {
   background-color: #111;
   align-content: flex-start;
@@ -99,12 +104,16 @@ footer {
   align-items: center;
   justify-content: end;
 }
-.ft-item-menu a:link,
-.ft-item-menu a:visited {
+.ft-item-menu .ft-item-menu-head {
+  display: inline-block;
+  margin-left: 1rem;
+}
+.ft-item-menu .ft-item-menu-each:link,
+.ft-item-menu .ft-item-menu-each:visited {
   color: #fff;
   text-decoration: none;
 }
-.ft-item-menu a:hover {
+.ft-item-menu .ft-item-menu-each:hover {
   text-decoration: underline;
 }
 hr {
@@ -457,7 +466,7 @@ hr {
     padding: 0 1rem;
   }
   .entry-content .detail-list img {
-    max-height: 120px;
+    max-height: 130px;
   }
   .entry-title {
     font-size: 2.4rem;
@@ -584,6 +593,181 @@ hr {
     .tag-links a {
       -webkit-tap-highlight-color: transparent;
     }
+  }
+}
+
+/* 小型スマートフォン向けスタイル (430px以下) */
+@media screen and (max-width: 430px) {
+  html {
+    font-size: 50%;
+  }
+
+  body {
+    font-size: 1.3rem;
+  }
+
+  .entry-title {
+    font-size: 2rem;
+  }
+
+  .entry-wapper {
+    padding: 0 0.8rem;
+  }
+
+  .entry-content {
+    padding: 0 0.5rem;
+  }
+
+  .entry-content img {
+    margin: 0.8rem 0;
+  }
+
+  .entry-content .detail-list img {
+    max-height: 120px;
+  }
+
+  .task-info {
+    font-size: 1.1rem;
+  }
+
+  .task-incharge {
+    font-size: 1.1rem;
+  }
+
+  .task-assignment {
+    padding: 0.7rem 1rem;
+  }
+
+  .task-strategy {
+    padding: 0.7rem 1rem;
+  }
+
+  .task-detail-head {
+    margin-top: 2.5rem;
+    font-size: 1.3rem;
+  }
+
+  .splash-title {
+    font-size: 2.8rem;
+  }
+
+  .splash-subttl {
+    font-size: 1.1rem;
+  }
+
+  .splash-author {
+    font-size: 1.1rem;
+  }
+
+  .page-top {
+    bottom: 5vh;
+    right: 1.5vh;
+  }
+
+  .page-top a {
+    width: 40px;
+    padding: 15px 0;
+    font-size: 1.2rem;
+  }
+
+  .ft-item-name {
+    font-size: 3rem;
+    padding: 0.7rem;
+    width: auto;
+  }
+
+  .ft-item-menu {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #111;
+    padding: 0;
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+    z-index: 999;
+  }
+
+  .ft-item-menu.active {
+    display: block;
+    transform: translateY(0);
+    font-size: 1.8rem;
+    letter-spacing: .15rem;
+  }
+
+  .ft-item-menu .ft-item-menu-head {
+    display: block;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-left: 1rem;
+  }
+
+  .ft-item-menu .ft-item-menu-each {
+    display: block;
+    padding: 3rem 0;
+    text-align: center;
+    line-height: 1;
+    border-top: 1px dotted rgba(255,255,255,0.3);
+  }
+
+  .ft-item-menu .ft-item-menu-each:last-child {
+    padding: 3rem 0;
+  }
+
+  .hamburger-menu {
+    display: block;
+    position: fixed;
+    top: 0vh;
+    right: 0vh;
+    z-index: 9000;
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+  }
+
+  .hamburger-menu span {
+    display: block;
+    position: absolute;
+    width: 26px;
+    height: 2px;
+    background: #aaa;
+    right: 0vh;
+    transform: translateX(-50%);
+    transition: all 0.3s;
+  }
+
+  .hamburger-menu span:nth-child(1) {
+    top: 13px;
+  }
+
+  .hamburger-menu span:nth-child(2) {
+    top: 21px;
+  }
+
+  .hamburger-menu span:nth-child(3) {
+    top: 29px;
+  }
+
+  .hamburger-menu.active span:nth-child(1) {
+    transform: translateX(-50%) translateY(8px) rotate(45deg);
+  }
+
+  .hamburger-menu.active span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger-menu.active span:nth-child(3) {
+    transform: translateX(-50%) translateY(-8px) rotate(-45deg);
+  }
+
+  .tag-links {
+    margin-top: 1.2rem;
+  }
+
+  .tag-links a {
+    padding: 0.3rem 0.4rem 0.3rem 0.5rem;
+    font-size: 0.8rem;
   }
 }
 
